--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/MythHavenTest.loader.js";
+      var loaderUrl = buildUrl + "/MythHavenFinal.loader.js";
       var config = {
-        dataUrl: buildUrl + "/MythHavenTest.data",
-        frameworkUrl: buildUrl + "/MythHavenTest.framework.js",
-        codeUrl: buildUrl + "/MythHavenTest.wasm",
+        dataUrl: buildUrl + "/MythHavenFinal.data",
+        frameworkUrl: buildUrl + "/MythHavenFinal.framework.js",
+        codeUrl: buildUrl + "/MythHavenFinal.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "MythHaven",
@@ -68,7 +68,7 @@
         showBanner: unityShowBanner,
       };
 
-      // By default, Unity keeps WebGL canvas render target size matched with
+      // By default Unity keeps WebGL canvas render target size matched with
       // the DOM size of the canvas element (scaled by window.devicePixelRatio)
       // Set this to false if you want to decouple this synchronization from
       // happening inside the engine, and you would instead like to size up
